--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,6 @@ position: absolute;
 right:3%;
 top:3%;
 }
+.bgimg{
+background-image: url('./images/128896-red-and-blue-abstract-curve-background.jpg');
+}
